fix distorted layout

--- a/public/css/exam-question.css
+++ b/public/css/exam-question.css
@@ -1,4 +1,4 @@
-#ManageExams {
+#ManageExams.student {
   display: flex;
 }
 
