--- a/public/css/quiz-question.css
+++ b/public/css/quiz-question.css
@@ -1,6 +1,4 @@
-
-
-#ManageQuiz {
+#ManageQuiz.student {
   display: flex;
 }
 
